fix: overflow

--- a/src/Pages/pages.css
+++ b/src/Pages/pages.css
@@ -1,5 +1,4 @@
 .tab-page {
-  width: 100%;
   margin: 0 auto;
   margin-top: 15px;
   border-top: 2px solid rgba(0, 0, 0, 0.1);
